--- a/package.json
+++ b/package.json
@@ -3,20 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.17",
-    "@types/node": "12.7.1",
-    "@types/react": "16.9.1",
-    "@types/react-dom": "16.8.5",
+    "axios": "^0.19.0",
+    "classnames": "^2.2.6",
+    "node-sass": "^4.12.0",
+    "primeicons": "^2.0.0",
+    "primereact": "^3.1.8",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.0.1",
-    "typescript": "3.5.3"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.0.1",
+    "react-transition-group": "^4.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/classnames": "^2.2.9",
+    "@types/jest": "^24.0.17",
+    "@types/node": "^12.7.1",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.8.5",
+    "@types/react-router-dom": "^4.3.4",
+    "@types/react-transition-group": "^4.2.2",
+    "typescript": "^3.5.3"
   },
   "eslintConfig": {
     "extends": "react-app"
